--- a/dom/color-blocks/color-blocks.html
+++ b/dom/color-blocks/color-blocks.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <P class="color">Введи в окно число, затем выбери цвет и нажми click в любой части.</P>
+    <P class="color"></P>
     <div class="blocks-coloring-container">
       <div class="controls">
         <input type="number" min="0" class="quantity-selector" />
