--- a/dom/modal-window/modal-template.html
+++ b/dom/modal-window/modal-template.html
@@ -12,10 +12,10 @@
 
     <div class="container">
       <p  class="red">
-        Текст призывающий открыть модальное окно.
+        модальное окно.
       </p>
-        <p class="red">Откроем?</p>
-      <button class="btn" id="openOverlay">Открыть!</button>
+        <p class="red"></p>
+      <button class="btn" id="openOverlay">Открыть</button>
     </div>
 
     <script type="html/template" id="overlayTemplate">
