--- a/dom/slider/slider.html
+++ b/dom/slider/slider.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./slider.css" />
   </head>
   <body>
-    <h1 class="title">Это супер-пупер сладер</h1>
+    <h1 class="title">просто сладер</h1>
     <div class="simple-slider-container">
       <a class="arrow" id="left" href="#">←</a>
       <div class="slider">
